test qr code scan

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6823,6 +6823,9 @@ li {
 a:hover, a:active, a:visited, a:focus {
   text-decoration: none; }
 
+.text-decoration-underline {
+  text-decoration: underline; }
+
 iframe {
   border: 0; }
 
