--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1028,20 +1028,22 @@
         .contract-body {
             padding-left: 0;
             padding-right: 0;
-            background-color: #ebebeb;
             color: #888888;
-            @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
-            .absolute-hands {
-                width: 120%;
-                top: 130%;
-                z-index: 5;
-                @include horizontal-align(absolute);
-            }
-            .rotate-animation {
-                width: 8%;
-                top: 150%;
-                position: absolute;
-                left: 46%;
+            .contact-body-wrapper {
+                background-color: #ebebeb;
+                @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
+                .absolute-hands {
+                    width: 120%;
+                    top: 130%;
+                    z-index: 5;
+                    @include horizontal-align(absolute);
+                }
+                .rotate-animation {
+                    width: 8%;
+                    top: 150%;
+                    position: absolute;
+                    left: 46%;
+                }
             }
         }
         .clock {
