--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1029,6 +1029,11 @@
             padding-left: 0;
             padding-right: 0;
             color: #888888;
+            .attention-in-process {
+                a {
+                    color: #888888;
+                }
+            }
             .contact-body-wrapper {
                 background-color: #ebebeb;
                 @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
