--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8774,6 +8774,8 @@ select.select-mac-fix {
         padding: 10px;
         border-bottom: 1px solid #888888;
         max-width: none !important; } }
+.module.single-contract-tile .attention-in-process a {
+  color: #888888; }
 .module.single-contract-tile .contract-participant {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -8834,8 +8836,6 @@ select.select-mac-fix {
   padding-left: 0;
   padding-right: 0;
   color: #888888; }
-  .module.single-contract-tile .contract-body .attention-in-process a {
-    color: #888888; }
   .module.single-contract-tile .contract-body .contact-body-wrapper {
     background-color: #ebebeb;
     -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
