--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8499,7 +8499,7 @@ select.select-mac-fix {
     .module.step-fields .single-row.dcn-address-row {
       position: relative; }
       .module.step-fields .single-row.dcn-address-row .position-relative {
-        position: static; }
+        position: static !important; }
       .module.step-fields .single-row.dcn-address-row .search-result {
         left: 0; } }
 .module.contract-proposal .wrapper {
@@ -8539,7 +8539,7 @@ select.select-mac-fix {
     .module.contract-proposal .wrapper .single-row.dcn-address-row {
       position: relative; }
       .module.contract-proposal .wrapper .single-row.dcn-address-row .position-relative {
-        position: static; }
+        position: static !important; }
       .module.contract-proposal .wrapper .single-row.dcn-address-row .search-result {
         left: 0; } }
   .module.contract-proposal .wrapper .pretty input[disabled] ~ * {
