--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7870,9 +7870,10 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
-  .white-blue-green-btn:hover {
-    color: #126585;
-    background-color: white; }
+  @media screen and (min-width: 992px) {
+    .white-blue-green-btn:hover {
+      color: #126585;
+      background-color: white; } }
   .white-blue-green-btn:focus {
     color: white; }
 
@@ -7895,9 +7896,10 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
-  .white-red-btn:hover {
-    color: white;
-    background-color: #e92f30; }
+  @media screen and (min-width: 992px) {
+    .white-red-btn:hover {
+      color: white;
+      background-color: #e92f30; } }
   .white-red-btn:focus {
     color: #e92f30; }
 
@@ -7920,9 +7922,10 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
-  .red-white-btn:hover {
-    color: #e92f30;
-    background-color: white; }
+  @media screen and (min-width: 992px) {
+    .red-white-btn:hover {
+      color: #e92f30;
+      background-color: white; } }
   .red-white-btn:focus {
     color: white; }
 
@@ -7945,9 +7948,10 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
-  .white-green-btn:hover {
-    color: #239234;
-    background-color: white; }
+  @media screen and (min-width: 992px) {
+    .white-green-btn:hover {
+      color: #239234;
+      background-color: white; } }
   .white-green-btn:focus {
     color: white; }
 
@@ -7972,11 +7976,12 @@ select.select-mac-fix {
   transition: 0.3s; }
   .green-white-btn path {
     fill: #239234; }
-  .green-white-btn:hover {
-    background-color: #239234;
-    color: white; }
-    .green-white-btn:hover path {
-      fill: white; }
+  @media screen and (min-width: 992px) {
+    .green-white-btn:hover {
+      background-color: #239234;
+      color: white; }
+      .green-white-btn:hover path {
+        fill: white; } }
   .green-white-btn:focus {
     color: white; }
 
@@ -8001,16 +8006,17 @@ select.select-mac-fix {
   transition: 0.3s; }
   .blue-green-white-btn path {
     fill: #126585; }
-  .blue-green-white-btn:hover {
-    background-color: #239234;
-    color: white; }
-    .blue-green-white-btn:hover path {
-      fill: white; }
-  .blue-green-white-btn:hover {
-    color: white;
-    background-color: #126585; }
   .blue-green-white-btn:focus {
     color: #126585; }
+  @media screen and (min-width: 992px) {
+    .blue-green-white-btn:hover {
+      color: white;
+      background-color: #239234; }
+      .blue-green-white-btn:hover path {
+        fill: white; }
+    .blue-green-white-btn:hover {
+      color: white;
+      background-color: #126585; } }
 
 .light-blue-green-white-btn {
   font-size: 20px;
@@ -8043,9 +8049,10 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
-  .white-transparent-btn:hover {
-    color: #126585;
-    background-color: white; }
+  @media screen and (min-width: 992px) {
+    .white-transparent-btn:hover {
+      color: #126585;
+      background-color: white; } }
   .white-transparent-btn:focus {
     color: white; }
 
