--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1760,4 +1760,22 @@
             }
         }
     }
+    &.show-category-list {
+        ul {
+            display: none;
+            font-size: 16px;
+            font-family: 'Calibri Light';
+            padding: 5px 0 15px 25px;
+            li {
+                list-style: disc inside none;
+            }
+        }
+        @include breakpoint($xs) {
+            padding-top: 10px;
+            padding-bottom: 5px;
+            ul {
+                padding: 5px 0 15px 0;
+            }
+        }
+    }
 }
