--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7760,6 +7760,7 @@ input[type='file'].hide-input {
 #search-result-parent {
   position: relative; }
   #search-result-parent:after {
+    z-index: -1;
     content: '';
     right: 10px;
     border-style: solid;
