--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -987,6 +987,12 @@
         }
     }
     &.single-contract-tile {
+        .patient-dentist-data {
+            &.position-relative-and-z-index {
+                z-index: 50;
+                position: relative;
+            }
+        }
         .attention-in-process {
             a {
                 color: #888888;
@@ -1240,6 +1246,10 @@
         .camping-for-popups {
             .popup-step-two {
                 display: none;
+            }
+            &.position-relative-and-z-index {
+                z-index: 40;
+                position: relative;
             }
         }
         &.mobile {
@@ -1656,9 +1666,9 @@
                     color: #888888;
                 }
             }
-            @include breakpoint($md) {
-                .pull-back-to-top {
-                    margin-top: -130px; 
+            &.pull-back-to-top {
+                @include breakpoint($md) {
+                    margin-top: -130px;
                 }
             }
         }
