--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10930,7 +10930,7 @@ section.contract-proposal .wrapper .step-fields .singatures-row {
           text-align: right;
           padding-right: 20px; }
         .single-contract-view-section .contract-title a.view-all-btn {
-          text-align: left;
+          text-align: left !important;
           padding-left: 20px; } }
 .single-contract-view-section.cancelled .contract-participant {
   background-color: #ebebeb; }
