--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -29,7 +29,7 @@
                     padding-right: 20px;
                 }
                 &.view-all-btn {
-                    text-align: left;
+                    text-align: left !important;
                     padding-left: 20px;
                 }
             }
