--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7949,31 +7949,30 @@ select.select-mac-fix {
   -ms-border-radius: 4px;
   border-radius: 4px; }
 
-.social-login-btn {
-  background-color: white;
-  width: 100%;
-  display: inline-block;
-  text-align: left;
-  color: black;
-  font-size: 20px;
-  padding: 10px 15px 10px 60px;
-  max-width: 350px;
-  margin: 0 auto;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-size: 30px auto;
-  background-position: center left 15px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px; }
-  .social-login-btn.civic-custom-btn {
-    background-image: url(/assets/uploads/civic.svg); }
-  .social-login-btn.facebook-custom-btn {
-    background-color: #4267B2;
-    color: white;
-    padding: 10px 15px; }
-
+/*.social-login-btn {
+    background-color: white;
+    width: 100%;
+    display: inline-block;
+    text-align: left;
+    color: black;
+    font-size: 20px;
+    padding: 10px 15px 10px 60px;
+    max-width: 350px;
+    margin: 0 auto;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-size: 30px auto;
+    background-position: center left 15px;
+    @include rounded(4px);
+    &.civic-custom-btn {
+        background-image: url(/assets/uploads/civic.svg);
+    }
+    &.facebook-custom-btn {
+        background-color: #4267B2;
+        color: white;
+        padding: 10px 15px;
+    }
+}*/
 .custom-input {
   width: 100%;
   padding: 12px 15px;
