--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -197,7 +197,7 @@
     @include rounded(4px);
 }
 
-.social-login-btn {
+/*.social-login-btn {
     background-color: white;
     width: 100%;
     display: inline-block;
@@ -220,7 +220,7 @@
         color: white;
         padding: 10px 15px;
     }
-}
+}*/
 
 .custom-input {
     width: 100%;
