--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -322,6 +322,8 @@
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
+  .blue-green-white-btn .white-border {
+    border: 2px solid white; }
   .blue-green-white-btn path {
     fill: #126585; }
   .blue-green-white-btn:focus {
