--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7883,6 +7883,8 @@ select.select-mac-fix {
   -o-transition: 0.3s;
   -ms-transition: 0.3s;
   transition: 0.3s; }
+  .blue-green-white-btn .white-border {
+    border: 2px solid white; }
   .blue-green-white-btn path {
     fill: #126585; }
   .blue-green-white-btn:focus {
