--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -129,7 +129,7 @@
     display: inline-block;
     cursor: pointer;
     text-decoration: none !important;
-    .white-border {  
+    &.white-border {
         border: 2px solid white;
     }
     @include rounded(4px);
